Update MatchForm and API service for improved match number handling and enhance .gitignore for backend files
- Modify MatchForm to allow auto-generation of match_number when not provided.
- Update API service to remove match_number from request if it defaults to 1, allowing backend to handle auto-generation.
- Enhance .gitignore to include backend-specific files and directories for better project organization.
- Minor formatting adjustments in SeriesList component for improved readability.

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,9 @@ next-env.d.ts
 *.out
 go.work
 
-server.log
-server
+# backend specific
+backend/main
+backend/server.log
+backend/supabase/
+backend/internal/database/schema_v1_prod.sql
+backend/api/
