--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -141,10 +141,11 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Run staticcheck
-        uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          version: "2023.1.7"
+        run: staticcheck -checks="all,-S1000,-ST1000" ./...
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
