--- a/backend/env.example
+++ b/backend/env.example
@@ -4,6 +4,7 @@ SUPABASE_API_KEY=your_supabase_anon_key
 
 # Database Configuration (for migrations)
 DATABASE_PASSWORD=your_database_password
+DATABASE_SCHEMA=prod_v1
 
 # Server Configuration
 PORT=8080
