--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -127,28 +127,54 @@ jobs:
       - name: Set up Go environment
         run: |
           # Set up Go environment with custom cache directories
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOCACHE="/opt/go-cache/go-build"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
           export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
           export TMPDIR="/opt/go-cache"
           
           # Create cache directories
           mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
           
           # Add to environment for subsequent steps
+          echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
           echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
           echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
+          echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
           echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
 
       - name: Download dependencies
-        run: go mod download
+        run: |
+          go mod download
+          go mod verify
 
       - name: Verify dependencies
         run: go mod verify
 
       - name: Check code formatting
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
+          # Update go.mod before formatting
+          go mod tidy
+          
           if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
             echo "The following files are not formatted:"
             gofmt -s -l .
@@ -156,13 +182,49 @@ jobs:
           fi
 
       - name: Run go vet
-        run: go vet ./...
+        run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
+          go vet ./...
 
       - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+        run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
+          go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
-        run: staticcheck -checks="all,-S1000,-ST1000" ./...
+        run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
+          staticcheck -checks="all,-S1000,-ST1000" ./...
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
@@ -203,25 +265,48 @@ jobs:
       - name: Set up Go environment
         run: |
           # Set up Go environment with custom cache directories
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOCACHE="/opt/go-cache/go-build"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
           export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
           export TMPDIR="/opt/go-cache"
           
           # Create cache directories
           mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
           
           # Add to environment for subsequent steps
+          echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
           echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
           echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
+          echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
           echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
 
       - name: Download dependencies
-        run: go mod download
+        run: |
+          go mod download
+          go mod verify
 
       - name: Run unit tests
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🧪 Running Unit Tests..."
           go test ./tests/unit/... -v -race -coverprofile=coverage.out
 
@@ -270,22 +355,34 @@ jobs:
       - name: Set up Go environment
         run: |
           # Set up Go environment with custom cache directories
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOCACHE="/opt/go-cache/go-build"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
           export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
           export TMPDIR="/opt/go-cache"
           
           # Create cache directories
           mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
           
           # Add to environment for subsequent steps
+          echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
           echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
           echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
+          echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
           echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
 
       - name: Download dependencies
-        run: go mod download
+        run: |
+          go mod download
+          go mod verify
 
       - name: Set up test environment
         run: |
@@ -311,6 +408,17 @@ jobs:
 
       - name: Run integration tests
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🔗 Running Integration Tests..."
           echo "SUPABASE_URL: $SUPABASE_URL"
           echo "SUPABASE_API_KEY: $SUPABASE_API_KEY"
@@ -324,6 +432,17 @@ jobs:
       - name: Run E2E tests
         if: ${{ inputs.run_e2e_tests != false }}
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🌐 Running End-to-End Tests..."
           go test ./tests/e2e/... -v -timeout=10m
         env:
@@ -364,25 +483,48 @@ jobs:
       - name: Set up Go environment
         run: |
           # Set up Go environment with custom cache directories
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOCACHE="/opt/go-cache/go-build"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
           export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
           export TMPDIR="/opt/go-cache"
           
           # Create cache directories
           mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
           
           # Add to environment for subsequent steps
+          echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
           echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
           echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
+          echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
           echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
 
       - name: Download dependencies
-        run: go mod download
+        run: |
+          go mod download
+          go mod verify
 
       - name: Build application
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🔨 Building application..."
           go build -o bin/server cmd/server/main.go
           echo "✅ Build completed successfully"
@@ -424,6 +566,17 @@ jobs:
 
       - name: Run Go Security Check
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🔍 Running basic security checks..."
           # Run go vet for basic security checks
           go vet ./...
@@ -454,6 +607,17 @@ jobs:
 
       - name: Build for ${{ inputs.environment }}
         run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="/opt/go-cache/go-build"
+          export GOPATH="/home/github-runner/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="/opt/go-cache/go-tmp"
+          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="/opt/go-cache"
+          
           echo "🔨 Building for ${{ inputs.environment }}..."
           if [ "${{ inputs.environment }}" = "production" ]; then
             CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o bin/server-${{ inputs.environment }} cmd/server/main.go
