--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -118,38 +118,38 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            /opt/go-cache/go-build
-            /opt/go-cache/go-mod
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Set up Go environment
         run: |
-          # Set up Go environment with custom cache directories
+          # Set up Go environment with user-writable cache directories
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
-          # Create cache directories
-          mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
+          # Create cache directories in user's home directory
+          mkdir -p "$HOME/.cache/go-build" "$HOME/.cache/go-tmp"
           
           # Add to environment for subsequent steps
           echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
-          echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOCACHE=$HOME/.cache/go-build" >> $GITHUB_ENV
+          echo "GOPATH=$HOME/go" >> $GITHUB_ENV
           echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
-          echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOTMPDIR=$HOME/.cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=$HOME/go/pkg/mod" >> $GITHUB_ENV
           echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
           echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
-          echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
+          echo "TMPDIR=$HOME/.cache" >> $GITHUB_ENV
 
       - name: Download dependencies
         run: |
@@ -163,14 +163,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           # Update go.mod before formatting
           go mod tidy
@@ -185,14 +185,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           go vet ./...
 
@@ -200,14 +200,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           go install honnef.co/go/tools/cmd/staticcheck@latest
 
@@ -215,14 +215,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           staticcheck -checks="all,-S1000,-ST1000" ./...
 
@@ -256,38 +256,38 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            /opt/go-cache/go-build
-            /opt/go-cache/go-mod
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Set up Go environment
         run: |
-          # Set up Go environment with custom cache directories
+          # Set up Go environment with user-writable cache directories
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
-          # Create cache directories
-          mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
+          # Create cache directories in user's home directory
+          mkdir -p "$HOME/.cache/go-build" "$HOME/.cache/go-tmp"
           
           # Add to environment for subsequent steps
           echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
-          echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOCACHE=$HOME/.cache/go-build" >> $GITHUB_ENV
+          echo "GOPATH=$HOME/go" >> $GITHUB_ENV
           echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
-          echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOTMPDIR=$HOME/.cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=$HOME/go/pkg/mod" >> $GITHUB_ENV
           echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
           echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
-          echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
+          echo "TMPDIR=$HOME/.cache" >> $GITHUB_ENV
 
       - name: Download dependencies
         run: |
@@ -298,14 +298,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🧪 Running Unit Tests..."
           go test ./tests/unit/... -v -race -coverprofile=coverage.out
@@ -346,38 +346,38 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            /opt/go-cache/go-build
-            /opt/go-cache/go-mod
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Set up Go environment
         run: |
-          # Set up Go environment with custom cache directories
+          # Set up Go environment with user-writable cache directories
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
-          # Create cache directories
-          mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
+          # Create cache directories in user's home directory
+          mkdir -p "$HOME/.cache/go-build" "$HOME/.cache/go-tmp"
           
           # Add to environment for subsequent steps
           echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
-          echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOCACHE=$HOME/.cache/go-build" >> $GITHUB_ENV
+          echo "GOPATH=$HOME/go" >> $GITHUB_ENV
           echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
-          echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOTMPDIR=$HOME/.cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=$HOME/go/pkg/mod" >> $GITHUB_ENV
           echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
           echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
-          echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
+          echo "TMPDIR=$HOME/.cache" >> $GITHUB_ENV
 
       - name: Download dependencies
         run: |
@@ -410,14 +410,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🔗 Running Integration Tests..."
           echo "SUPABASE_URL: $SUPABASE_URL"
@@ -434,14 +434,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🌐 Running End-to-End Tests..."
           go test ./tests/e2e/... -v -timeout=10m
@@ -474,38 +474,38 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            /opt/go-cache/go-build
-            /opt/go-cache/go-mod
+            ~/.cache/go-build
+            ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Set up Go environment
         run: |
-          # Set up Go environment with custom cache directories
+          # Set up Go environment with user-writable cache directories
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
-          # Create cache directories
-          mkdir -p /opt/go-cache/go-build /opt/go-cache/go-mod /opt/go-cache/go-tmp
+          # Create cache directories in user's home directory
+          mkdir -p "$HOME/.cache/go-build" "$HOME/.cache/go-tmp"
           
           # Add to environment for subsequent steps
           echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
-          echo "GOCACHE=/opt/go-cache/go-build" >> $GITHUB_ENV
-          echo "GOPATH=/home/github-runner/go" >> $GITHUB_ENV
+          echo "GOCACHE=$HOME/.cache/go-build" >> $GITHUB_ENV
+          echo "GOPATH=$HOME/go" >> $GITHUB_ENV
           echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
-          echo "GOTMPDIR=/opt/go-cache/go-tmp" >> $GITHUB_ENV
-          echo "GOMODCACHE=/opt/go-cache/go-mod" >> $GITHUB_ENV
+          echo "GOTMPDIR=$HOME/.cache/go-tmp" >> $GITHUB_ENV
+          echo "GOMODCACHE=$HOME/go/pkg/mod" >> $GITHUB_ENV
           echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
           echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
-          echo "TMPDIR=/opt/go-cache" >> $GITHUB_ENV
+          echo "TMPDIR=$HOME/.cache" >> $GITHUB_ENV
 
       - name: Download dependencies
         run: |
@@ -516,14 +516,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🔨 Building application..."
           go build -o bin/server cmd/server/main.go
@@ -568,14 +568,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🔍 Running basic security checks..."
           # Run go vet for basic security checks
@@ -609,14 +609,14 @@ jobs:
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
-          export GOCACHE="/opt/go-cache/go-build"
-          export GOPATH="/home/github-runner/go"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
           export GOROOT="/usr/local/go"
-          export GOTMPDIR="/opt/go-cache/go-tmp"
-          export GOMODCACHE="/opt/go-cache/go-mod"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
-          export TMPDIR="/opt/go-cache"
+          export TMPDIR="$HOME/.cache"
           
           echo "🔨 Building for ${{ inputs.environment }}..."
           if [ "${{ inputs.environment }}" = "production" ]; then
